samples/_failures_safe/1761043142_ae8769_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a86f6458.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_a86f6458.c:167:9: error: expected declaration or statement at end of input
  167 |         default: return "UNKNOWN";
      |         ^~~~~~~
./samples/SAFE/__tmp_a86f6458.c:167:9: error: expected declaration or statement at end of input
